logs/turtlesim/build.make.078.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘bool turtlesim::Turtle::update(double, QPainter&, const QImage&, qreal, qreal)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:228:46: error: no matching function for call to ‘QPainter::drawEllipse(QPoint (*)(int, int), int, int)’
       path_painter.drawEllipse(&way, 100, 100);
                                              ^
In file included from /usr/include/x86_64-linux-gnu/qt5/QtGui/QPainter:1:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:48,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:316:10: note: candidate: void QPainter::drawEllipse(const QRectF&)
     void drawEllipse(const QRectF &r);
          ^~~~~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:316:10: note:   candidate expects 1 argument, 3 provided
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:317:10: note: candidate: void QPainter::drawEllipse(const QRect&)
     void drawEllipse(const QRect &r);
          ^~~~~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:317:10: note:   candidate expects 1 argument, 3 provided
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:649:13: note: candidate: void QPainter::drawEllipse(int, int, int, int)
 inline void QPainter::drawEllipse(int x, int y, int w, int h)
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:649:13: note:   candidate expects 4 arguments, 3 provided
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:654:13: note: candidate: void QPainter::drawEllipse(const QPointF&, qreal, qreal)
 inline void QPainter::drawEllipse(const QPointF &center, qreal rx, qreal ry)
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:654:13: note:   no known conversion for argument 1 from ‘QPoint (*)(int, int)’ to ‘const QPointF&’
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:659:13: note: candidate: void QPainter::drawEllipse(const QPoint&, int, int)
 inline void QPainter::drawEllipse(const QPoint &center, int rx, int ry)
             ^~~~~~~~
/usr/include/x86_64-linux-gnu/qt5/QtGui/qpainter.h:659:13: note:   no known conversion for argument 1 from ‘QPoint (*)(int, int)’ to ‘const QPoint&’
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
